feat: nodemailer + activation api
