# src/routes/api.ts
@@ -1,5 +1,10 @@
 import express from "express";
-import { checkAuth, login, register } from "../controller/auth.controller";
+import {
+  activation,
+  checkAuth,
+  login,
+  register,
+} from "../controller/auth.controller";
 import { handleAsync } from "../utils/catchAsync";
 import { protectRoute } from "../middleware/auth.middleware";
 
@@ -7,6 +12,7 @@ const router = express.Router();
 
 router.route("/auth/register").post(
   /**
+    #swagger.tags = ['Auth']
     #swagger.requestBody = {
       required: true,
       schema: {$ref: "#/components/schemas/RegisterRequest"}
@@ -15,8 +21,10 @@ router.route("/auth/register").post(
 
   handleAsync(register),
 );
+
 router.route("/auth/login").post(
   /**
+    #swagger.tags = ['Auth']
     #swagger.requestBody = {
       required: true,
       schema: {$ref: "#/components/schemas/LoginRequest"}
@@ -25,17 +33,32 @@ router.route("/auth/login").post(
 
   handleAsync(login),
 );
+
 router.route("/auth/logout").post();
+
 router.route("/auth/check-auth").get(
   protectRoute,
 
   /**
+   #swagger.tags = ['Auth']
    #swagger.security = [{
     "bearerAuth": []
    }]
    */
 
   handleAsync(checkAuth),
+);
+
+router.route("/auth/activation").post(
+  /**
+    #swagger.tags = ['Auth']
+    #swagger.requestBody = {
+      required: true,
+      schema: {$ref: "#/components/schemas/ActivationRequest"}
+    } 
+   */
+
+  handleAsync(activation),
 );
 
 export default router;
